# oxylabs-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: deploy-badge.yml  lint_and_test.yml
src/oxylabs_mcp/: __init__.py  server.py  smithery.py  url_params.py  utils.py
src/oxylabs_mcp/tools/: ai_studio.py  scraper.py
tests/: conftest.py
tests/e2e/: test_llm_agent.py
tests/integration/: params.py  test_ai_studio_tools.py  test_scraper_tools.py  test_server.py
tests/unit/: test_utils.py
