[project]
name = "oxylabs-mcp"
version = "0.1.0"
description = "Oxylabs MCP server"
authors = [
    {name="Augis Braziunas", email="augis.braziunas@oxylabs.io"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.1",
    "markdownify>=0.14.1",
    "mcp[cli]>=1.2.0",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Fork with minimal fix for Claude disconnection errors
# When https://github.com/modelcontextprotocol/python-sdk/pull/85 merged, change back to official lib.
[tool.uv.sources]
mcp = { git = "https://github.com/txbm/python-sdk", rev = "19185626d57fdd670219784d10859c7d0a302c2e" }

[project.scripts]
oxylabs-mcp = "oxylabs_mcp:main"
