[project]
name = "oxylabs-mcp"
version = "0.1.0"
description = "Oxylabs MCP server"
authors = [
    {name="Augis Braziunas", email="augis.braziunas@oxylabs.io"},
    {name="Rostyslav Borovyk", email="rostyslav.borovyk@oxylabs.io"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.1",
    "markdownify>=0.14.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oxylabs-mcp = "oxylabs_mcp:main"

[project.urls]
Homepage = "https://github.com/oxylabs/oxylabs-mcp"
Repository = "https://github.com/oxylabs/oxylabs-mcp"
