[project]
name = "oxylabs-mcp"
version = "0.1.1"
description = "Oxylabs MCP server"
authors = [
    {name="Augis Braziunas", email="augis.braziunas@oxylabs.io"},
    {name="Rostyslav Borovyk", email="rostyslav.borovyk@oxylabs.io"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "lxml-html-clean>=0.4.1",
    "markdownify>=0.14.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.10.5",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
oxylabs-mcp = "oxylabs_mcp:main"

[project.urls]
Homepage = "https://github.com/oxylabs/oxylabs-mcp"
Repository = "https://github.com/oxylabs/oxylabs-mcp"

[[tool.mypy.overrides]]
module = "markdownify.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
lint.select = [
  "E", # pycodestyle (E, W) - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F", # Pyflakes (F) - https://docs.astral.sh/ruff/rules/#pyflakes-f
  "W", # pycodestyle (E, W) - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "I", # isort (I) https://docs.astral.sh/ruff/rules/#isort-i
  "D", # pydocstyle (D) https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "S", # bandit (S) https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "ARG", # flake8-unused-arguments - https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
  "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "C4",  # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "ISC", # flake8-implicit-str-concat - https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
  "FA",  # flake8-future-annotations - https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
  "FBT", # flake8-boolean-trap - https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
  "Q", # flake8-quotes (Q) https://docs.astral.sh/ruff/rules/#flake8-quotes-q
]
lint.ignore = [
  "D213",  # Contradicts D212.
  "D203",  # Contradicts D211.
  "D104", # Allow no docstrings in packages
  "D100", # Allow no docstrings in modules
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "S101", "ARG001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
